# globe-2

./: .gitignore  README.md  build.js  dev-server.js  docker-compose.yml  generate_requests.py  idea.json  index.html  package-lock.json  package.json  pyproject.toml  requirements-test.txt  requirements.txt  run.sh  scratchpad.md  setup.py  test_events.json  todo.md  tsconfig.json
app/: __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/api/: __init__.py  api_router.py  deps.py  router.py
app/api/models/: __init__.py  analytics_models.py  auth_models.py
app/config/: __init__.py  logger.py  settings.py
app/core/: __init__.py  config.py  logging.py
app/db/: __init__.py  factory.py  interface.py  mongodb.py  supabase_storage.py  timescale_storage.py
app/env/: pyvenv.cfg
app/events/: __init__.py  processor.py  todolist.md
app/middleware/: security.py
app/models/: __init__.py  analytics_models.py  api_models.py  auth_models.py  events.py  sessions.py
app/services/: auth.py  kafka.py  privacy_processor.py  producer.py
app/utils/: mongo_utils.py
app/workers/: stream_processor.py
extension/: contentScript.js  manifest.json  webpack.config.js
extension/utils/: browserAPI.ts
src/: background.js  build.js  content.js  content.ts  env.d.ts  manifest.json  package-lock.json  package.json  popup.html  style.css  tsconfig.json
src/static/: improvements.md  index.html
static/: index.html
static/js/: analytics.js  newAnalytics.js
static/ts/: analytics.ts  authWebhook.ts  newAnalytics.ts
tests/: generate_data.py
(+21 files in other folders)
