[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "globe-tracking-api"
version = "0.1.0"
description = "Globe API and analytics"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "motor",
    "pydantic",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "psutil"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]